public class SimulationOptions {
    // General simulation options
    public int mapSize;
    public int nTeams;
    public int teamPopulation;
    public int nCows;
    public int nHamsters;
    public int simulationSpeed;

    // Perlin noise options
    public double noiseScale;
    public int noiseOctaves;
}
