package Structures;

/**
 * World's height map
 */
public class HeightMap {
    /**
     * Two-dimensional array of doubles representing the world's height map
     */
    public double[][] height;
}
